fix(app): Tweak sizing and spacing to better match screens

--- a/app/src/components/App.css
+++ b/app/src/components/App.css
@@ -2,7 +2,7 @@
 /* stylelint-disable font-family-no-missing-generic-family-keyword  */
 
 .wrapper {
-  width: 1024px;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: row;
