--- a/components/src/nav/SidePanel.css
+++ b/components/src/nav/SidePanel.css
@@ -1,7 +1,7 @@
 @import '..';
 
 :root {
-  --sidebar-width: 18rem;
+  --sidebar-width: 17.5rem;
 }
 
 .panel {
